# dice_duelers

./: CMakeLists.txt
include/: ConsoleColor.h  GameManager.h
main/: client_main.cpp  server_main.cpp
src/: GameManager.cpp  NetworkManager.cpp  Player.cpp
tutorials/: Tutorial - Understanding the Player.h.md  Tutorial 01 - Player Class Definition.md  Tutorial 02 - Player Class Implementation.md  Tutorial 04 - Dice Class.md  Tutorial 08 - GameManager.md  Tutorial 1 - Player Class Definition.md  Tutorial 1 - Understanding the Player.h.md  Tutorial 10 - Client Class.md  Tutorial 11- Server_main.md  Tutorial 12 - Client_main.md  Tutorial 13 - Protocol.md  Tutorial 2 - Player Implementation.md  Tutorial 3 - Windows.h.md  Tutorial 5 - Intro to Socket Programming.md  Tutorial 6 – Making the Game Playable Over the Internet.md  Tutorial 7 - NetworkManager.md  Tutorial 8 - GameManager.md  Tutorial 9 - Server Class
